kubernetes/apps/network-system/envoy-gateway/config/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend
spec:
  compressor:
    - type: Zstd
      zstd: {}
    - type: Brotli
      brotli: {}
    - type: Gzip
      gzip: {}
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: 0s
  # Custom error page redirects
  responseOverride:
    # 403 Forbidden
    - match:
        statusCodes:
          - type: Value
            value: 403
      redirect: &redirect
        scheme: https
        hostname: error-pages.tholinka.dev
        path:
          type: &pathType ReplaceFullPath
          replaceFullPath: /403.html
        statusCode: 302

    # 404 Not Found
    - match:
        statusCodes: [{ type: Value, value: 404 }]
      redirect:
        <<: *redirect
        path:
          type: *pathType
          replaceFullPath: /404.html
        statusCode: 302

    # 500 Internal Server Error
    - match:
        statusCodes: [{ type: Value, value: 500 }]
      redirect:
        <<: *redirect
        path:
          type: *pathType
          replaceFullPath: /500.html
        statusCode: 302

    # 502 Bad Gateway
    - match:
        statusCodes: [{ type: Value, value: 502 }]
      redirect:
        <<: *redirect
        path:
          type: *pathType
          replaceFullPath: /502.html
        statusCode: 302

    # 503 Service Unavailable
    - match:
        statusCodes: [{ type: Value, value: 503 }]
      redirect:
        <<: *redirect
        path:
          type: *pathType
          replaceFullPath: /503.html
        statusCode: 302

    # 504 Gateway Timeout
    - match:
        statusCodes: [{ type: Value, value: 504 }]
      redirect:
        <<: *redirect
        path:
          type: *pathType
          replaceFullPath: /504.html
        statusCode: 302
